# popalol

./: README.md  pyproject.toml
src/: manage.py
src/notice/: urls.py  views.py
src/notice/static/notice/: script.js  style.css
src/notice/templates/notice/: index.html
src/popalol/: asgi.py  settings.py  urls.py  wsgi.py
