[tool.poetry]
name = "popalol"
version = "0.1.0"
description = ""
authors = ["Aleksandr Zuev <zuev08@gmail.com>"]
readme = "README.md"
packages = [{include = "popalol", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
